# ka9q-radio

./: .gitignore  CMakeLists.txt  INSTALL.txt  Makefile.debug  Makefile.linux  Makefile.pi  Makefile.rx888  Makefile.sdrplay  README.md  avahi.c  ezusb.c  ezusb.h  main.c  modulate.c  multicast.c  opusd.c  opusd@.service  opusd@wjct.conf  opusd@wjkv.conf  pcmrecord.c  radio.c  radio.h  radiod@fm.conf  radiod@kfs.conf  rx888.c  rx888.h  rx888d.c  rx888d.conf  rx888d@.service  sdrplay.c  sdrplayd.c  sdrplayd.conf
.github/workflows/: ci.yml
afiles/: CMakeLists.txt
config/: radiod@sdrplay-generic.conf
src/: CMakeLists.txt
src/airspy/: CMakeLists.txt
src/control/: CMakeLists.txt
src/funcube/: CMakeLists.txt
src/hackrf/: CMakeLists.txt
src/iq/: CMakeLists.txt
src/libradio/: CMakeLists.txt
src/metadump/: CMakeLists.txt
src/modulate/: CMakeLists.txt
src/monitor/: CMakeLists.txt
src/opus/: CMakeLists.txt
src/packet/: CMakeLists.txt
src/pcm/: CMakeLists.txt  pcmspawn.c
src/pl/: CMakeLists.txt
src/radio/: CMakeLists.txt
src/rds/: CMakeLists.txt
src/rtlsdr/: CMakeLists.txt
src/sdrplay/: CMakeLists.txt  sdrplayd.c
src/setfilt/: CMakeLists.txt
src/show-pkt/: CMakeLists.txt
src/show-sig/: CMakeLists.txt
src/stereo/: CMakeLists.txt
src/tune/: CMakeLists.txt
src/wspr/: CMakeLists.txt
utils/: install-sdrplay.sh
