# Make sure our local CMake Modules path comes first
list(INSERT CMAKE_MODULE_PATH 0 ${CMAKE_SOURCE_DIR}/cmake/Modules)

find_package(PkgConfig REQUIRED)
pkg_check_modules(AVAHI REQUIRED avahi-client)
if(${CMAKE_SYSTEM_NAME} MATCHES Linux)
  pkg_check_modules(BSD REQUIRED libbsd)
endif(${CMAKE_SYSTEM_NAME} MATCHES Linux)
pkg_check_modules(FFTW3F REQUIRED fftw3f)
pkg_check_modules(NCURSESW REQUIRED ncursesw)
pkg_check_modules(OPUS REQUIRED opus)
pkg_check_modules(PORTAUDIO REQUIRED portaudio-2.0)
find_package(Threads)

add_compile_options(-march=native -std=gnu11 -pthread -Wall -funsafe-math-optimizations)
add_compile_definitions(_GNU_SOURCE)     # needed for sincos() and sincosf()

# MacOS does not have /usr/local/include and /usr/local/lib by default
if(${CMAKE_SYSTEM_NAME} MATCHES Darwin)
  include_directories(/usr/local/include)
  link_directories(/usr/local/lib)
endif(${CMAKE_SYSTEM_NAME} MATCHES Darwin)

add_subdirectory(libradio)
add_subdirectory(radio)
add_subdirectory(control)
add_subdirectory(monitor)
add_subdirectory(opus)
add_subdirectory(stereo)
add_subdirectory(packet)
add_subdirectory(iq)
add_subdirectory(metadump)
add_subdirectory(modulate)
add_subdirectory(pcm)
add_subdirectory(pl)
add_subdirectory(rds)
add_subdirectory(setfilt)
add_subdirectory(show-pkt)
add_subdirectory(show-sig)
add_subdirectory(tune)
add_subdirectory(wspr)

# front-ends
if(AIRSPY)
    add_subdirectory(airspy)
endif(AIRSPY)
if(FUNCUBE)
    add_subdirectory(funcube)
endif(FUNCUBE)
if(HACKRF)
    add_subdirectory(hackrf)
endif(HACKRF)
if(RTLSDR)
    add_subdirectory(rtlsdr)
endif(RTLSDR)
if(SDRPLAY)
    add_subdirectory(sdrplay)
endif(SDRPLAY)
